tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_wrong_diagnostic_object_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:25
  •
  │
  • invalid type: map, expected a boolean
  │
  │   {"diagnostics":{"onSave":{}}}
  │                           ╰
  •
