tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_wrong_diagnostic_type_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:26
  •
  │
  • invalid type: string "false", expected a boolean
  │
  │   {"diagnostics":{"onSave":"false"}}
  │                            ╰──────
  •
