tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_wrong_top_level_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: invalid configuration in --config: invalid type: boolean `false`, expected struct ConfigurationSettings at line 1 column 5
