tests-e2e/tests/package_manager/snapshots/package_manager__cli__docs_project_requires_value.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: a value is required for '--spago-project <DIR>' but none was supplied

For more information, try '--help'.
