tests-e2e/tests/package_manager/snapshots/package_manager__cli__docs_requires_package_or_project.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the following required arguments were not provided:
  --package

Usage: purescript-alexandrite docs [FLAGS] [SUBCOMMAND]

For more information, try '--help'.
