tests-e2e/tests/package_manager/snapshots/package_manager__cli__duplicate_build_scalar.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the argument '--package' cannot be used multiple times

Usage: iris build [FLAGS]

For more information, try '--help'.
